Actualizar frase en el hero

--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,7 @@
 
     <!-- Rol + propuesta de valor -->
     <p class="hero-subtitle">
-      “Soy desarrollador web junior apasionado por crear aplicaciones modernas y usables. Actualmente buscando prácticas y abierto a mi primer empleo como Front-End Developer. Me gusta trabajar con HTML, CSS, JavaScript y empezar a crecer con React.”
-    </p>
+      «Desde que descubrí la programación, intento programarme para poder vivir de esto.»
 
     <!-- CTAs -->
     <div class="hero-cta">
@@ -64,7 +63,7 @@
 
   <section id="about" class="section">
     <h2>Sobre mí</h2>
-    <p>Aquí puedes escribir una pequeña biografía, tu historia, motivaciones y tus objetivos profesionales.</p>
+    <p>Soy desarrollador web junior apasionado por crear aplicaciones modernas y usables. Actualmente buscando prácticas y abierto a mi primer empleo como Front-End Developer. Me gusta trabajar con HTML, CSS, JavaScript y empezar a crecer con React.</p>
   </section>
 
   <section id="skills" class="section">
