--- a/html/index.html
+++ b/html/index.html
@@ -31,25 +31,22 @@
     </h1>
 
     <!-- Rol + propuesta de valor -->
-    <p class="hero-subtitle">
-      «Desde que descubrí la programación, intento programarme para poder vivir de esto.»
+<p class="hero-subtitle">
+  Desde que descubrí la programación, intento programarme para poder vivir de esto.
+</p>
 
-    <!-- CTAs -->
-    <div class="hero-cta">
-      <a href="#projects" class="btn">Ver proyectos</a>
-      <a href="#contact" class="btn btn-outline">Contactar</a>
-      <a href="CV_Gabriel_Rodriguez.pdf" class="btn btn-ghost" target="_blank" rel="noopener">Descargar CV</a>
-    </div>
+<!-- CTAs -->
+<div class="hero-cta">
+  <a href="#projects" class="btn">Ver proyectos</a>
+  <a href="#contact" class="btn btn-outline">Contactar</a>
+  <a href="media/CV_Gabriel_Rodriguez_Blanco_Enhanced.pdf" class="btn btn-ghost" target="_blank" rel="noopener" aria-label="Descargar CV en PDF">Descargar CV</a>
+</div>
 
-    <!-- Social links -->
-    <div class="hero-social">
-      <a href="https://github.com/tuusuario" target="_blank" rel="noopener" aria-label="GitHub" class="social-link">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.35-1.76-1.35-1.76-1.1-.75.08-.73.08-.73 1.22.09 1.86 1.26 1.86 1.26 1.08 1.86 2.83 1.32 3.52 1.01.11-.78.42-1.32.76-1.62-2.66-.3-5.46-1.33-5.46-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.51.12-3.16 0 0 1.01-.32 3.3 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.86.12 3.16.77.84 1.23 1.91 1.23 3.22 0 4.61-2.8 5.63-5.47 5.93.43.38.82 1.11.82 2.24v3.32c0 .32.22.7.83.58A12 12 0 0 0 12 .5Z"/></svg>
-      </a>
-      <a href="https://www.linkedin.com/in/tuusuario" target="_blank" rel="noopener" aria-label="LinkedIn" class="social-link">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M20.45 20.45h-3.55v-5.6c0-1.34-.03-3.05-1.86-3.05-1.86 0-2.14 1.45-2.14 2.95v5.7H9.35V9h3.4v1.56h.05c.47-.9 1.62-1.86 3.34-1.86 3.57 0 4.23 2.35 4.23 5.4v6.35zM5.34 7.43a2.06 2.06 0 1 1 0-4.12 2.06 2.06 0 0 1 0 4.12zM7.12 20.45H3.55V9h3.57v11.45z"/></svg>
-      </a>
-    </div>
+<!-- Social links -->
+<div class="hero-social">
+  <a href="https://github.com/Gabriel15gabi" target="_blank" rel="noopener" aria-label="GitHub" class="social-link">…</a>
+  <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-blanco-72776a252" target="_blank" rel="noopener" aria-label="LinkedIn" class="social-link">…</a>
+</div>
 
     <!-- Mini stats (opcionales) -->
     <ul class="hero-stats" aria-label="Datos rápidos">
