--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
   <span class="hero-name">Gabriel Rodríguez Blanco</span>
 </h1>
 <p class="hero-subtitle">
-  Desarrollador Web Junior · Front-End · HTML · CSS · JavaScript · React
+  Desarrollador Web Junior
 </p>
 
 
