Actualizado index.html y JS para portfolio

--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@
 
     <div class="about-right">
       <!-- Mini timeline -->
-      <h3 class="about-subtitle">Ruta reciente</h3>
+      <h3 class="about-subtitle">Experiencia reciente</h3>
       <ol class="about-timeline">
         <li><span>2024</span> Empecé formación Front-End (Tokio School)</li>
         <li><span>2025</span> Terminé dos proyectos (SPA y Restaurante)</li>
