Versión inicial del portfolio

--- a/html/index.html
+++ b/html/index.html
@@ -160,7 +160,7 @@
 
   <section id="projects" class="section snap-section">
     <div class="container">
-      <h2>PROYECTOS</h2>
+      <h2>PROYECTOS <span id="project-count"></span></h2>
       <div class="projects-container"></div>
     </div>
   </section>
